attached_assets/Pasted-sipantichijk-penguin-church-project-SoC-cd-church-proje_1780490564666.txt
sipantichijk@penguin:~/church_project/SoC$ cd ~/church_project/SoC

# Find the correct efx_pnr command from the script it generated last time:
cat work_pnr/run_efx_pnr.sh 2>/dev/null | head -10

# Check efx_pnr help for correct flags:
~/efinity/2026.1/bin/efx_pnr --help 2>&1 | head -20

# Compile firmware (the main.c fix IS present, just needs to build):
cd firmware && make 2>&1
cd ..

# Verify compile worked:
ls -la firmware/firmware.bin EfxSapphireSoc*.bin 2>/dev/null | head -6
INFO     : Usage: efx_pnr [Options ...]
           
INFO     : Primary Options:
INFO     :     [--family <string>]                       :      Device Family
INFO     :     [--device <string>]                       :      Device
INFO     :     [--circuit <string>]                      :      Circuit Name
INFO     :     [--prj <string>]                          :      name of project XML file to use
INFO     :     [--settings_file <string>]                :      EFX_PNR Settings File
INFO     :     [--verbose]                               :      Generate Verbose, Detailed message output
INFO     :     [--route]                                 :      Run EFX_PNR Router
INFO     :     [--place]                                 :      Run EFX_PNR Placer (implies --global_place --detailed_place)
INFO     :     [--global_place]                          :      Run EFX_PNR Global Placer
INFO     :     [--detailed_place]                        :      Run EFX_PNR Detailed Placer
INFO     :     [--pack]                                  :      Run EFX_PNR Packer
INFO     :     [--help]                                  :      Display Basic EFX_PNR options
INFO     :     [--help-verbose]                          :      Display Advanced EFX_PNR options
INFO     : General Options:
INFO     :     [--max_threads <int>]                     :      Maximum number of threads allowed
INFO     :     [--work_dir <string>]                     :      Work Directory
INFO     :     [--output_dir <string>]                   :      Output File Directory
/home/sipantichijk/efinity/efinity-riscv-ide-2025.2/toolchain/bin/riscv-none-embed-gcc -march=rv32im -mabi=ilp32 -O2 -nostdlib -ffreestanding -Wall -Wextra -T link.ld -o firmware.elf crt0.S main.c
main.c: In function 'main':
main.c:276:1: error: expected declaration or statement at end of input
 }
 ^
make: *** [Makefile:48: firmware.elf] Error 1
sipantichijk@penguin:~/church_project/SoC$ 